Posts justificados e .gitignore alterado

--- a/hidroponia/diario/templates/historico.html
+++ b/hidroponia/diario/templates/historico.html
@@ -20,7 +20,7 @@
 
 	{% for post in posts %}
 	<div class="post">
-    	<p>Data: {{ post.data_publicacao }}</p>
+    	<p><b>Data: {{ post.data_publicacao }}</b></p>
     	<p>{{ post.comentarios|linebreaksbr }}</p>
 		
 	</div>
