--- a/hidroponia/diario/static/estilo.css
+++ b/hidroponia/diario/static/estilo.css
@@ -20,6 +20,7 @@ body {
 	padding-bottom:10px;
 	padding-left:10px;
 	padding-right:10px;
+	text-align:justify;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
