Inserindo imagens sem deixa-las bonitas

--- a/hidroponia/diario/templates/historico.html
+++ b/hidroponia/diario/templates/historico.html
@@ -3,13 +3,13 @@
 <html>
 <meta name="viewport" content="width=device-width">
     <head>
-        <title>Histórico</title>
+        <title>Diário de Cultivo :: Histórico</title>
 		<link rel="stylesheet" href="{% static 'estilo.css'%}">
     </head>
     <body>
 
 	<div class="cabecalho">
-		<h1>Diário de cultivo</h1>
+		<h1>Diário de Cultivo</h1>
 
 		<ul>
 			<li><a href="/temporeal">Tempo Real</a></li>
