Adicionando coisas com CSS

--- a/hidroponia/diario/templates/historico.html
+++ b/hidroponia/diario/templates/historico.html
@@ -20,9 +20,29 @@
 
 	{% for post in posts %}
 	<div class="post">
-    	<p><b>Data: {{ post.data_publicacao }}</b></p>
+    	<p><h3><b>Data: {{ post.data_publicacao }}</b></h3></p>
     	<p>{{ post.comentarios|linebreaksbr }}</p>
 		
+		<table>
+			<tr>
+				<td>pH da água:</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<td>Temperatura da água:</td>
+				<td>15 ºC</td>
+			</tr>
+			<tr>
+				<td>Temperatura do ar:</td>
+				<td>20 ºC</td>
+			</tr>
+			<tr>
+				<td>Iluminância</td>
+				<td>10 lux</td>
+			</tr>
+		</table>
+
+		<img src="{{MEDIA_URL}}/{{ post.historico_ph }}" />
 	</div>
 	{% endfor %}
     </body>
