--- a/hidroponia/diario/static/estilo.css
+++ b/hidroponia/diario/static/estilo.css
@@ -16,12 +16,20 @@ body {
 .post {
 	background-color:#2E8B57;
 	color: White;
-	padding-top:10px;
-	padding-bottom:10px;
+	margin: 20px auto;
+	padding-top:20px;
+	padding-bottom:30px;
 	padding-left:10px;
 	padding-right:10px;
 	text-align:justify;
 	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+img {
+	max-width: 100%;
+	margin: auto;
+	display: block;
+	height: auto;
 }
 
 ul {
@@ -50,4 +58,17 @@ li a:hover:not(.active) {
 .active {
 	background-color: #4CAF50;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+	background-color: White;
+}
+
+td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
 
