--- a/hidroponia/diario/templates/temporeal.html
+++ b/hidroponia/diario/templates/temporeal.html
@@ -9,7 +9,7 @@
     <body>
 
 	<div class="cabecalho">
-		<h1>Diário de cultivo</h1>
+		<h1>Diário de Cultivo</h1>
 
 		<ul>
 			<li><a href="/temporeal">Tempo Real</a></li>
