Feita a página do tempo real e organização em tabelas

--- a/hidroponia/diario/templates/cadastrar.html
+++ b/hidroponia/diario/templates/cadastrar.html
@@ -3,7 +3,7 @@
 <html>
 <meta name="viewport" content="width=device-width">
     <head>
-        <title>Diario de Cultivo :: Tempo Real</title>
+        <title>Diário de Cultivo :: Tempo Real</title>
 		<link rel="stylesheet" href="{% static 'estilo.css'%}">
     </head>
     <body>
