--- a/hidroponia/diario/templates/temporeal.html
+++ b/hidroponia/diario/templates/temporeal.html
@@ -1,7 +1,8 @@
 {% load staticfiles %}
 
 <html>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width"/>
+<meta http-equiv="refresh" content="5" />
     <head>
         <title>Diário de Cultivo :: Tempo Real</title>
 		<link rel="stylesheet" href="{% static 'estilo.css'%}">
@@ -15,6 +16,7 @@
 			<li><a href="/temporeal">Tempo Real</a></li>
 			<li><a href="/historico">Historico</a></li>
 			<li><a href="/cadastrar">Cadastrar</a></li>
+			<li><a href="/buscar">Buscar</a></li>
 		</ul>
 	</div>
 
