Sem histórico e com dados plotando

--- a/hidroponia/diario/templates/temporeal.html
+++ b/hidroponia/diario/templates/temporeal.html
@@ -2,7 +2,7 @@
 
 <html>
 <meta name="viewport" content="width=device-width"/>
-<meta http-equiv="refresh" content="5" />
+<meta http-equiv="refresh" content="2" />
     <head>
         <title>Diário de Cultivo :: Tempo Real</title>
 		<link rel="stylesheet" href="{% static 'estilo.css'%}">
@@ -14,15 +14,13 @@
 
 		<ul>
 			<li><a href="/temporeal">Tempo Real</a></li>
-			<li><a href="/historico">Historico</a></li>
-			<li><a href="/cadastrar">Cadastrar</a></li>
 			<li><a href="/buscar">Buscar</a></li>
 		</ul>
 	</div>
 
 		<table>
 			<tr>
-				<td><img src="https://blog.emania.com.br/content/uploads/2015/12/paisagem-tropical-wallpaper-1.jpg"></td>
+				<td><img src="{{MEDIA_URL}}camera.jpg"></td>
 				<td width="40%">
 					<table>
 						<tr>
