Adicionada pagina de controle e também transição no css

--- a/hidroponia/diario/templates/temporeal.html
+++ b/hidroponia/diario/templates/temporeal.html
@@ -15,6 +15,7 @@
 		<ul>
 			<li><a href="/temporeal">Tempo Real</a></li>
 			<li><a href="/buscar">Buscar</a></li>
+			<li><a href="/controlar">Controlar</a></li>
 		</ul>
 	</div>
 
