--- a/hidroponia/diario/templates/controlar.html
+++ b/hidroponia/diario/templates/controlar.html
@@ -3,7 +3,7 @@
 <html>
 <meta name="viewport" content="width=device-width"/>
     <head>
-        <title>Diário de Cultivo :: Buscar</title>
+        <title>Diário de Cultivo :: Controlar</title>
 		<link rel="stylesheet" href="{% static 'estilo.css'%}">
     </head>
     <body>
@@ -18,10 +18,10 @@
 		</ul>
 	</div>
 
-	<form action="/buscar/" method="post">
+	<form action="/controlar/" method="post">
     	{% csrf_token %}
     	{{ form.as_table }}
-    	<input type="submit" value="Buscar" />
+    	<input type="submit" value="Setar" />
 	</form>
 
     </body>
