--- a/hidroponia/diario/static/estilo.css
+++ b/hidroponia/diario/static/estilo.css
@@ -1,17 +1,17 @@
 
 body {
-	padding-top: 15px;
+	padding-top: 10px;
 	text-align: center;
-	width:800px;
+	width:90%;
 	margin:auto;
 }
 
 .cabecalho {
-	width: 100vw;
+	width: 100%;
 	font-size:2vw;
-	background-color:#2E8B57;
+	background-color:#618e00;
 	color: White;
-	padding-top:10px;
+	padding-top:1px;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	transition: unset;
 }
@@ -49,6 +49,7 @@ li {
 li a {
 	display: block;
 	color: white;
+	border:1px solid #333;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -56,7 +57,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-	background-color: #111;
+	background-color: #70A000;
 }
 
 .active {
@@ -64,14 +65,34 @@ li a:hover:not(.active) {
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
+    	border-collapse: collapse;
+    	width: 100%;
 	background-color: White;
 }
 
+#infos {
+	border:1px solid black;
+}
+
+#row1 {
+	background-color: #333;
+	color:white;
+	text-align:center;
+}
+
 td {
-    text-align: left;
-    padding: 8px;
+	font-size:2vw;
+    	text-align: left;
+    	padding: 0px;
+	padding-top:5px;
+	padding-bottom:5px;
+}
+
+@media (max-width:800px){
+	td {
+	display:table-row;
+	width:80%;
+	}
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
