--- a/hidroponia/diario/templates/cadastrar.html
+++ b/hidroponia/diario/templates/cadastrar.html
@@ -19,7 +19,7 @@
 
 	<form action="/cadastrar/" method="post">
     	{% csrf_token %}
-    	{{ form.as_table }}
+    	{{ form.as_p }}
     	<input type="submit" value="Cadastrar" />
 	</form>
 
