--- a/hidroponia/diario/templates/controlar.html
+++ b/hidroponia/diario/templates/controlar.html
@@ -20,7 +20,7 @@
 
 	<form action="/controlar/" method="post">
     	{% csrf_token %}
-    	{{ form.as_table }}
+    	{{ form.as_p }}
     	<input type="submit" value="Setar" />
 	</form>
 
