--- a/hidroponia/diario/static/estilo.css
+++ b/hidroponia/diario/static/estilo.css
@@ -1,75 +1,115 @@
-
-body {
-	padding-top: 15px;
-	text-align: center;
-	width:800px;
-	margin:auto;
-}
-
 .cabecalho {
-	background-color:#2E8B57;
-	color: White;
-	padding-top:10px;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+background-color:#2E8B57;
+color: White;
+padding-top:10px;
+text-align: center;
+font-family: "Comic Sans MS", cursive, sans-serif;
+width: 100%
 }
 
 .post {
-	background-color:#2E8B57;
-	color: White;
-	margin: 20px auto;
-	padding-top:20px;
-	padding-bottom:30px;
-	padding-left:10px;
-	padding-right:10px;
-	text-align:justify;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+background-color:#2E8B57;
+color: White;
+margin: 20px auto;
+padding-top:20px;
+padding-bottom:30px;
+padding-left:10px;
+padding-right:10px;
+text-align:justify;
+font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 img {
-	max-width: 100%;
-	margin: auto;
-	display: block;
-	height: auto;
+max-width: 100%;
+margin: auto;
+display: block;
+height: auto;
+}
+p label {
+text-align:center;
 }
 
 ul {
-	list-style-type: none;
-	padding: 0;
-	overflow: hidden;
-	background-color: #333;
+list-style-type: none;
+padding: 0;
+overflow: hidden;
+background-color: #333;
 }
 
 li {
-	float: left;
-}
-
-li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	transition: all 1s;
+float: left;
 }
 
 li a:hover:not(.active) {
-	background-color: #111;
+background-color: #111;
 }
 
 .active {
-	background-color: #4CAF50;
+background-color: #4CAF50;
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
-	background-color: White;
+border-collapse: collapse;
+width: 100%;
+background-color: White;
 }
 
 td {
-    text-align: left;
-    padding: 8px;
+text-align: left;
+padding: 8px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
 
+@media (min-width: 480px) {
+	body {
+		padding-top: 15px;
+		text-align: center;
+		width:800px;
+		margin:auto;
+	}
+
+	li a {
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		transition: all 1s;
+	}
+}
+
+
+@media (max-width: 800px) {
+	body {
+		padding-top: 15px;
+		text-align: center;
+		width:100%;
+		margin:auto;
+	}
+	
+	li a {
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		transition: all 1s;
+	}
+}
+
+@media (max-width: 480px) {
+
+ul {
+list-style-type: none;
+background-color: #333;
+padding: 0;
+margin: 0;
+width: 100%;
+}
+
+li a{
+display: block;
+}
+
+}
